Fix width of elements that push layout boundaries on small viewports

--- a/src/components/Example.module.scss
+++ b/src/components/Example.module.scss
@@ -11,7 +11,7 @@
 
 .value {
   margin: calc(var(--mm-spacing) / 4) 0 0 0;
-  max-width: calc(100vw - calc(var(--mm-spacing) * 3 - 2px));
+  max-width: calc(100vw - calc(var(--mm-spacing) * 2 - 2px));
   padding-top: 0;
 }
 
